Code to be validated. Incorporates the null pointer error while importing directories with an empty folder, the XincoExplorer loading lag (when opening folders with many subfolders) plus new feature/setting which disables/enables link outside of Xinco and the Italian translation.
Submmited for verification while I conclude my validation. Changes will be limited to fixing issues during validation.