@@ -33,7 +33,6 @@
  *
  *************************************************************
  */
-
 package com.bluecubs.xinco.server;
 
 import com.bluecubs.xinco.add.XincoAddAttribute;
@@ -46,42 +45,63 @@ import com.bluecubs.xinco.core.*;
 import com.bluecubs.xinco.core.server.*;
 import java.util.Locale;
 import java.util.ResourceBundle;
+import org.apache.axis.encoding.Base64;
 
 public class XincoPublisherServlet extends HttpServlet {
+
+    private XincoDBManager db;
     ResourceBundle rb;
+
     /** Initializes the servlet.
+     * @param config
+     * @throws javax.servlet.ServletException 
      */
+    @Override
     public void init(ServletConfig config) throws ServletException {
         super.init(config);
     }
-    
+
     /** Destroys the servlet.
      */
+    @Override
     public void destroy() {
     }
-    
+
     /** Processes requests for both HTTP <code>GET</code> and <code>POST</code> methods.
      * @param request servlet request
      * @param response servlet response
+     * @throws javax.servlet.ServletException
+     * @throws java.io.IOException 
      */
     protected synchronized void processRequest(HttpServletRequest request, HttpServletResponse response)
-    throws ServletException, IOException {
+            throws ServletException, IOException {
+        try {
+            db = new XincoDBManager();
+        } catch (Exception e) {
+
+        }
         Locale loc = null;
         try {
             String list = request.getParameter("list");
             String[] locales;
             locales = list.split("_");
-            switch(locales.length){
-                case 1: loc = new Locale(locales[0]);break;
-                case 2: loc = new Locale(locales[0],locales[1]);break;
-                case 3: loc = new
-                        Locale(locales[0],locales[1],locales[2]);break;
-                default: loc = Locale.getDefault();
+            switch (locales.length) {
+                case 1:
+                    loc = new Locale(locales[0]);
+                    break;
+                case 2:
+                    loc = new Locale(locales[0], locales[1]);
+                    break;
+                case 3:
+                    loc = new Locale(locales[0], locales[1], locales[2]);
+                    break;
+                default:
+                    loc = Locale.getDefault();
             }
         } catch (Exception e) {
             loc = Locale.getDefault();
         }
-        rb = ResourceBundle.getBundle("com.bluecubs.xinco.messages.XincoMessages",loc);
+        rb = ResourceBundle.getBundle("com.bluecubs.xinco.messages.XincoMessages", loc);
         int i = 0;
         int j = 0;
         String request_path;
@@ -97,7 +117,7 @@ public class XincoPublisherServlet extends HttpServlet {
         String temp_url = "";
         String temp_server_url = "";
         boolean isPublic = false;
-        
+
         //connect to db
         try {
             dbm = new XincoDBManager();
@@ -108,7 +128,7 @@ public class XincoPublisherServlet extends HttpServlet {
             out.println(e.toString());
             return;
         }
-        
+
         //get requested data
         if (request.getParameter("MainMenu") == null) {
             request_path = request.getPathInfo();
@@ -126,9 +146,8 @@ public class XincoPublisherServlet extends HttpServlet {
                             isPublic = true;
                         } else {
                             //check read permission for group "public"
-                            for (i=0;i<xcd.getXinco_core_acl().size();i++) {
-                                if ((((XincoCoreACE)xcd.getXinco_core_acl().elementAt(i)).getXinco_core_group_id() == 3)
-                                && ((XincoCoreACE)xcd.getXinco_core_acl().elementAt(i)).isRead_permission()) {
+                            for (i = 0; i < xcd.getXinco_core_acl().size(); i++) {
+                                if ((((XincoCoreACE) xcd.getXinco_core_acl().elementAt(i)).getXinco_core_group_id() == 3) && ((XincoCoreACE) xcd.getXinco_core_acl().elementAt(i)).isRead_permission()) {
                                     isPublic = true;
                                     break;
                                 }
@@ -160,14 +179,14 @@ public class XincoPublisherServlet extends HttpServlet {
                 fileDownload = false;
             }
         }
-        
+
         //generate specific output
         if (fileDownload) { // begin FILE output
-            
+
             try {
                 response.setContentType("unknown/unknown");
                 OutputStream out = response.getOutputStream();
-                
+
                 FileInputStream in = new FileInputStream(XincoCoreDataServer.getXincoCoreDataPath(dbm.config.FileRepositoryPath, core_data_id, "" + core_data_id));
                 byte[] buf = new byte[4096];
                 int len;
@@ -178,15 +197,15 @@ public class XincoPublisherServlet extends HttpServlet {
             } catch (Exception e) {
                 System.out.println(e);
             }
-            
-            //end FILE output
-            
+
+        //end FILE output
+
         } else { // begin HTML output
-            
+
             //start output
             response.setContentType("text/html");
             PrintWriter out = response.getWriter();
-            
+
             //show header
             out.println("<html>");
             out.println("<head>");
@@ -195,23 +214,23 @@ public class XincoPublisherServlet extends HttpServlet {
                 out.println("<link rel=\"stylesheet\" href=\"xincostyle.css\" type=\"text/css\"/>");
             }
             if (core_data_id > 0) {
-                out.println("<title>" +  xcd.getDesignation() + "</title>");
+                out.println("<title>" + xcd.getDesignation() + "</title>");
                 out.println("<link rel=\"stylesheet\" href=\"../../xincostyle.css\" type=\"text/css\"/>");
             }
             out.println("</head>");
-            out.println("<body>");
+            out.println("<body "+(!db.config.isAllowOutsideLinks()?"oncontextmenu='return false;' ":" ")+">");
             out.println("<center>");
             out.println("<span class=\"text\">");
-            
+
             out.println("");
-            
+
             //show main menu
             if (core_data_id == 0) {
                 out.println("<br>");
                 out.println("<table border=\"0\" width=\"750\" cellspacing=\"10\" cellpadding=\"0\">");
                 out.println("<tr>");
-                out.println("<td class=\"text\" width=\"100\"><img src=\"blueCubsSmall.gif\" border=\"0\"/></td>");
-                out.println("<td class=\"bigtext\" width=\"650\">"+rb.getString("message.admin.main.publisher.label")+"</td>");
+                out.println("<td class=\"text\" width=\"100\"><img src='resources/images/blueCubsSmall.gif' border=\"0\"/></td>");
+                out.println("<td class=\"bigtext\" width=\"650\">" + rb.getString("message.admin.main.publisher.label") + "</td>");
                 out.println("</tr>");
                 out.println("</table>");
                 out.println("<br>");
@@ -227,13 +246,13 @@ public class XincoPublisherServlet extends HttpServlet {
                             temp_url = "";
                             //file = 1
                             if (xdata_temp.getXinco_core_data_type().getId() == 1) {
-                                temp_url = ((XincoAddAttribute)xdata_temp.getXinco_add_attributes().elementAt(0)).getAttrib_varchar();
+                                temp_url = ((XincoAddAttribute) xdata_temp.getXinco_add_attributes().elementAt(0)).getAttrib_varchar();
                             } else {
                                 temp_url = xdata_temp.getDesignation();
                             }
                             out.println("<tr>");
                             out.println("<td class=\"text\">" + xdata_temp.getDesignation() + " (" + xdata_temp.getXinco_core_data_type().getDesignation() + " | " + xdata_temp.getXinco_core_language().getSign() + ")" + "</td>");
-                            out.println("<td class=\"text\"><a href=\"" + "XincoPublisher/" + xdata_temp.getId() + "/" + temp_url + "?list="+request.getParameter("list")+"\" target=\"_blank\">" + temp_server_url + "/" + xdata_temp.getId() + "/" + temp_url + "</a></td>");
+                            out.println("<td class=\"text\"><a href=\"" + "XincoPublisher/" + xdata_temp.getId() + "/" + temp_url + "?list=" + request.getParameter("list") + "\" target=\"_blank\">" + temp_server_url + "/" + xdata_temp.getId() + "/" + temp_url + "</a></td>");
                             out.println("</tr>");
                             out.flush();
                         }
@@ -248,15 +267,14 @@ public class XincoPublisherServlet extends HttpServlet {
                         String temp_path = null;
                         String temp_path2 = null;
                         int temp_xcn_id = 0;
-                        
+
                         if (!(request.getParameter("FolderId") == null)) {
                             temp_xcn_id = Integer.parseInt(request.getParameter("FolderId"));
                             xnode_temp = new XincoCoreNodeServer(temp_xcn_id, dbm);
                             //check read permission for group "public"
                             isPublic = false;
-                            for (i=0;i<xnode_temp.getXinco_core_acl().size();i++) {
-                                if ((((XincoCoreACE)xnode_temp.getXinco_core_acl().elementAt(i)).getXinco_core_group_id() == 3)
-                                && ((XincoCoreACE)xnode_temp.getXinco_core_acl().elementAt(i)).isRead_permission()) {
+                            for (i = 0; i < xnode_temp.getXinco_core_acl().size(); i++) {
+                                if ((((XincoCoreACE) xnode_temp.getXinco_core_acl().elementAt(i)).getXinco_core_group_id() == 3) && ((XincoCoreACE) xnode_temp.getXinco_core_acl().elementAt(i)).isRead_permission()) {
                                     isPublic = true;
                                     break;
                                 }
@@ -267,9 +285,9 @@ public class XincoPublisherServlet extends HttpServlet {
                                 // print current path
                                 if (!(request.getParameter("Path") == null)) {
                                     temp_path = request.getParameter("Path");
-                                    temp_path = new String(new sun.misc.BASE64Decoder().decodeBuffer(temp_path));
+                                    temp_path = new String(Base64.decode(temp_path));
                                     out.println("<tr>");
-                                    out.println("<td colspan=\"2\" class=\"text\"><b>"+rb.getString("general.path")+"</b> " + temp_path + "</td>");
+                                    out.println("<td colspan=\"2\" class=\"text\"><b>" + rb.getString("general.path") + "</b> " + temp_path + "</td>");
                                     out.println("</tr>");
                                     out.println("<tr>");
                                     out.println("<td colspan=\"2\" class=\"text\">&nbsp;</td>");
@@ -280,16 +298,15 @@ public class XincoPublisherServlet extends HttpServlet {
                                 }
                                 // list public folders
                                 out.println("<tr>");
-                                out.println("<td colspan=\"2\" class=\"text\"><b>"+rb.getString("message.xincopublisher.subfolders")+"</b></td>");
+                                out.println("<td colspan=\"2\" class=\"text\"><b>" + rb.getString("message.xincopublisher.subfolders") + "</b></td>");
                                 out.println("</tr>");
                                 out.flush();
-                                for (i=0;i<xnode_temp.getXinco_core_nodes().size();i++) {
-                                    xnode_temp2 = new XincoCoreNodeServer(((XincoCoreNodeServer)xnode_temp.getXinco_core_nodes().elementAt(i)).getId(), dbm);
+                                for (i = 0; i < xnode_temp.getXinco_core_nodes().size(); i++) {
+                                    xnode_temp2 = new XincoCoreNodeServer(((XincoCoreNodeServer) xnode_temp.getXinco_core_nodes().elementAt(i)).getId(), dbm);
                                     isPublic = false;
                                     //check read permission for group "public"
-                                    for (j=0;j<xnode_temp2.getXinco_core_acl().size();j++) {
-                                        if ((((XincoCoreACE)xnode_temp2.getXinco_core_acl().elementAt(j)).getXinco_core_group_id() == 3)
-                                        && ((XincoCoreACE)xnode_temp2.getXinco_core_acl().elementAt(j)).isRead_permission()) {
+                                    for (j = 0; j < xnode_temp2.getXinco_core_acl().size(); j++) {
+                                        if ((((XincoCoreACE) xnode_temp2.getXinco_core_acl().elementAt(j)).getXinco_core_group_id() == 3) && ((XincoCoreACE) xnode_temp2.getXinco_core_acl().elementAt(j)).isRead_permission()) {
                                             isPublic = true;
                                             break;
                                         }
@@ -297,15 +314,15 @@ public class XincoPublisherServlet extends HttpServlet {
                                     if (isPublic) {
                                         if (temp_path != null) {
                                             temp_path2 = temp_path + " / " + xnode_temp2.getDesignation() + " (" + xnode_temp2.getXinco_core_language().getSign() + ")";
-                                            temp_path2 = new sun.misc.BASE64Encoder().encode(temp_path2.getBytes());
+                                            temp_path2 = Base64.encode(temp_path2.getBytes());
                                             temp_path2 = "&Path=" + temp_path2;
                                         } else {
                                             temp_path2 = "";
                                         }
                                         out.println("<tr>");
                                         out.println("<td class=\"text\">&nbsp;</td>");
-                                        out.println("<td class=\"text\"><a href=\"" + "XincoPublisher?MainMenu=browse&FolderId=" + 
-                                                xnode_temp2.getId() + temp_path2 + "&list="+request.getParameter("list")+"\">[" +
+                                        out.println("<td class=\"text\"><a href=\"" + "XincoPublisher?MainMenu=browse&FolderId=" +
+                                                xnode_temp2.getId() + temp_path2 + "&list=" + request.getParameter("list") + "\">[" +
                                                 xnode_temp2.getDesignation() + " (" + xnode_temp2.getXinco_core_language().getSign() + ")" +
                                                 "]</a></td>");
                                         out.println("</tr>");
@@ -318,21 +335,20 @@ public class XincoPublisherServlet extends HttpServlet {
                                 out.flush();
                                 // list public data
                                 out.println("<tr>");
-                                out.println("<td colspan=\"2\" class=\"text\"><b>"+
-                                        rb.getString("message.xincopublisher.publicdata")+"</b></td>");
+                                out.println("<td colspan=\"2\" class=\"text\"><b>" +
+                                        rb.getString("message.xincopublisher.publicdata") + "</b></td>");
                                 out.println("</tr>");
                                 out.flush();
-                                for (i=0;i<xnode_temp.getXinco_core_data().size();i++) {
-                                    xdata_temp = new XincoCoreDataServer(((XincoCoreDataServer)xnode_temp.getXinco_core_data().elementAt(i)).getId(), dbm);
+                                for (i = 0; i < xnode_temp.getXinco_core_data().size(); i++) {
+                                    xdata_temp = new XincoCoreDataServer(((XincoCoreDataServer) xnode_temp.getXinco_core_data().elementAt(i)).getId(), dbm);
                                     isPublic = false;
                                     //check status (5 = published)
                                     if (xdata_temp.getStatus_number() == 5) {
                                         isPublic = true;
                                     } else {
                                         //check read permission for group "public"
-                                        for (j=0;j<xdata_temp.getXinco_core_acl().size();j++) {
-                                            if ((((XincoCoreACE)xdata_temp.getXinco_core_acl().elementAt(j)).getXinco_core_group_id() == 3)
-                                            && ((XincoCoreACE)xdata_temp.getXinco_core_acl().elementAt(j)).isRead_permission()) {
+                                        for (j = 0; j < xdata_temp.getXinco_core_acl().size(); j++) {
+                                            if ((((XincoCoreACE) xdata_temp.getXinco_core_acl().elementAt(j)).getXinco_core_group_id() == 3) && ((XincoCoreACE) xdata_temp.getXinco_core_acl().elementAt(j)).isRead_permission()) {
                                                 isPublic = true;
                                                 break;
                                             }
@@ -343,13 +359,13 @@ public class XincoPublisherServlet extends HttpServlet {
                                         temp_url = "";
                                         //file = 1
                                         if (xdata_temp.getXinco_core_data_type().getId() == 1) {
-                                            temp_url = ((XincoAddAttribute)xdata_temp.getXinco_add_attributes().elementAt(0)).getAttrib_varchar();
+                                            temp_url = ((XincoAddAttribute) xdata_temp.getXinco_add_attributes().elementAt(0)).getAttrib_varchar();
                                         } else {
                                             temp_url = xdata_temp.getDesignation();
                                         }
                                         out.println("<tr>");
                                         out.println("<td class=\"text\">" + xdata_temp.getDesignation() + " (" + xdata_temp.getXinco_core_data_type().getDesignation() + " | " + xdata_temp.getXinco_core_language().getSign() + ")" + "</td>");
-                                        out.println("<td class=\"text\"><a href=\"" + "XincoPublisher/" + xdata_temp.getId() + "/" + temp_url + "?list="+request.getParameter("list")+"\" target=\"_blank\">" + temp_server_url + "/" + xdata_temp.getId() + "/" + temp_url + "</a></td>");
+                                        out.println("<td class=\"text\"><a href=\"" + "XincoPublisher/" + xdata_temp.getId() + "/" + temp_url + "?list=" + request.getParameter("list") + "\" target=\"_blank\">" + temp_server_url + "/" + xdata_temp.getId() + "/" + temp_url + "</a></td>");
                                         out.println("</tr>");
                                         out.flush();
                                     }
@@ -360,22 +376,22 @@ public class XincoPublisherServlet extends HttpServlet {
                     }
                 } else {
                     out.println("<tr>");
-                    out.println("<td class=\"text\" colspan=\"2\"><a href=\"XincoPublisher?MainMenu=list&list="+request.getParameter("list")+"\" class=\"link\">"+rb.getString("message.xincopublisher.list")+"</td>");
+                    out.println("<td class=\"text\" colspan=\"2\"><a href=\"XincoPublisher?MainMenu=list&list=" + request.getParameter("list") + "\" class=\"link\">" + rb.getString("message.xincopublisher.list") + "</td>");
                     out.println("</tr>");
                     out.println("<tr>");
-                    out.println("<td class=\"text\" colspan=\"2\"><a href=\"XincoPublisher?MainMenu=browse&FolderId=1&Path=" + (new sun.misc.BASE64Encoder().encode((new String("xincoRoot")).getBytes())) + "&list="+request.getParameter("list")+"\" class=\"link\">"+rb.getString("message.xincopublisher.browse")+"</td>");
+                    out.println("<td class=\"text\" colspan=\"2\"><a href=\"XincoPublisher?MainMenu=browse&FolderId=1&Path=" + (Base64.encode((new String("xincoRoot")).getBytes())) + "&list=" + request.getParameter("list") + "\" class=\"link\">" + rb.getString("message.xincopublisher.browse") + "</td>");
                     out.println("</tr>");
                 }
                 out.println("<tr>");
                 out.println("<td class=\"text\" colspan=\"2\">&nbsp;<br><br></td>");
                 out.println("</tr>");
                 out.println("<tr>");
-                out.println("<td class=\"text\" colspan=\"2\">"+rb.getString("message.xincopublisher.howto")+"</td>");
+                out.println("<td class=\"text\" colspan=\"2\">" + rb.getString("message.xincopublisher.howto") + "</td>");
                 out.println("</tr>");
                 out.println("</table>");
             }
             if (core_data_id > 0) {
-                
+
                 out.println("<br>");
                 out.println("<table border=\"0\" cellspacing=\"10\" cellpadding=\"0\">");
                 out.println("<tr>");
@@ -385,11 +401,11 @@ public class XincoPublisherServlet extends HttpServlet {
                 out.println("<tr>");
                 out.println("<td class=\"text\" colspan=\"2\">&nbsp;</td>");
                 out.println("</tr>");
-                
+
                 //print additional attributes
-                for (i=0;i<xcd.getXinco_add_attributes().size();i++) {
-                    xcdta = ((XincoCoreDataTypeAttribute)xcd.getXinco_core_data_type().getXinco_core_data_type_attributes().elementAt(i));
-                    xaa = ((XincoAddAttribute)xcd.getXinco_add_attributes().elementAt(i));
+                for (i = 0; i < xcd.getXinco_add_attributes().size(); i++) {
+                    xcdta = ((XincoCoreDataTypeAttribute) xcd.getXinco_core_data_type().getXinco_core_data_type_attributes().elementAt(i));
+                    xaa = ((XincoAddAttribute) xcd.getXinco_add_attributes().elementAt(i));
                     out.println("<tr>");
                     out.println("<td class=\"text\" valign=\"top\"><b>" + xcdta.getDesignation() + ":</b></td>");
                     if (xcdta.getData_type().toLowerCase().compareTo("int") == 0) {
@@ -412,66 +428,76 @@ public class XincoPublisherServlet extends HttpServlet {
                     }
                     out.println("</tr>");
                 }
-                
+
                 out.println("</table>");
-                
+
             }
-            
+
             //show footer
             if (core_data_id == 0) {
                 out.println("<br><br><br>");
                 out.println("<table border=\"0\" cellspacing=\"10\" cellpadding=\"0\">");
                 out.println("<tr>");
                 out.println("<td class=\"text\">&nbsp;</td>");
-                out.println("<td class=\"text\">&copy; "+rb.getString("general.copyright.date")+", "+rb.getString("message.admin.main.footer"));
+                out.println("<td class=\"text\">&copy; " + rb.getString("general.copyright.date") + ", " +
+                        //Avoid external links if general.setting.allowoutsidelinks is set to false
+                        //Security bug
+                        (db.config.isAllowOutsideLinks() ? rb.getString("message.admin.main.footer") : "blueCubs.com and xinco.org"));
                 out.println("</tr>");
-                out.println("</table><tr><form action='menu.jsp'><input type='submit' value='"+
-                        rb.getString("message.admin.main.backtomain")+"' />" +
-                        "<input type='hidden' name='list' value='"+request.getParameter("list")+"'/></form></tr>" +
-                        "<tr><FORM><INPUT TYPE='button' VALUE='"+rb.getString("message.admin.main.back")+
-                        "' onClick='history.go(-1);return true;'><input type='hidden' name='list' value='"+
-                        request.getParameter("list")+"'/></FORM></tr>");
+                out.println("</table><tr><form action='menu.jsp'><input type='submit' value='" +
+                        rb.getString("message.admin.main.backtomain") + "' />" +
+                        "<input type='hidden' name='list' value='" + request.getParameter("list") + "'/></form></tr>" +
+                        "<tr><FORM><INPUT TYPE='button' VALUE='" + rb.getString("message.admin.main.back") +
+                        "' onClick='history.go(-1);return true;'><input type='hidden' name='list' value='" +
+                        request.getParameter("list") + "'/></FORM></tr>");
             }
-            
+
             out.println("</span>");
             out.println("</center>");
             out.println("</body>");
             out.println("</html>");
-            
+
             out.close();
-            
+
         } //end HTML output
-        
+
         //close db connection
         try {
             dbm.con.close();
         } catch (Exception e) {
         }
-        
+
     }
-    
+
     /** Handles the HTTP <code>GET</code> method.
      * @param request servlet request
      * @param response servlet response
+     * @throws javax.servlet.ServletException
+     * @throws java.io.IOException 
      */
+    @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
-    throws ServletException, IOException {
+            throws ServletException, IOException {
         processRequest(request, response);
     }
-    
+
     /** Handles the HTTP <code>POST</code> method.
      * @param request servlet request
      * @param response servlet response
+     * @throws javax.servlet.ServletException
+     * @throws java.io.IOException 
      */
+    @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
-    throws ServletException, IOException {
+            throws ServletException, IOException {
         processRequest(request, response);
     }
-    
+
     /** Returns a short description of the servlet.
+     * @return 
      */
+    @Override
     public String getServletInfo() {
         return "Servlet of xinco";
     }
-    
 }
